deploy/openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: kueue-dashboard
  labels:
    app: kueue-dashboard
spec:
  to:
    kind: Service
    name: kueue-dashboard-frontend
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
